refactor: bring AccountController annotations in line with other controller classes